custom pointer proof of concept.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </p>
 
   <p>
-SUGAR activates space as public art: a curatorial project that produces exhibitions, events, publications, and digital platforms.
+<span class="cPointer" data-pointer="img/dickinson.jpg">SUGAR activates space as public art: a curatorial project that produces exhibitions, events, publications, and digital platforms.</span>
 </p>
 
 <p>
