--- a/index.html
+++ b/index.html
@@ -17,37 +17,32 @@
         
 
         <div id="main">
-        <p>
-      SUGAR is a space for contemporary art.
-  </p>
-
-  <p>
-<span class="cPointer" data-pointer="img/dickinson.jpg">SUGAR activates space as public art: a curatorial project that produces exhibitions, events, publications, and digital platforms.</span>
+            <p>
+     SUGAR is a curatorial project that produces exhibitions, events, publications, and digital platforms. 
 </p>
-
 <p>
-130 Queens Quay E. Toronto
+Formed as a continuous research project between 2018-2022. 
 </p>
-
 <p>
-Opening October 2019 
+Opening October 2019 <br />
+Opening hours Tuesday-Saturday 11:00am-6:00pm 
 </p>
-
 <p>
-SUGAR is situated near Toronto’s historic Sugar Refinery at the waterfront, a context that triggers our conceptual framework. 
+130 Queens Quay E. Toronto (ground floor North-West corner at Jarvis) 
 </p>
-
+<p>
+Situated near Toronto’s historic Sugar Refinery at the waterfront, the site provides context for our conceptual framework. 
+</p>
 <p>
 SUGAR is a unique partnership between Daniels Waterfront Corporation, Carol Weinbaum & Niall Haggart, and SUGAR co-directors/curators Ala Roushan & Xenia Benivolski.
 </p>
-
 <p>
 SUGAR Curatorial Advisory Group includes: Gaëtane Verna, Candice Hopkins, Chrissie Iles, Paul O’Niell and Dorothée Dupuis. 
 </p>
-
 <p>
-416.XX.XXXX<br />
-<a href="mailto:info@sugar-contemporary.com">info@sugar-contemporary.com</a>
+416.XX.XXXX (we can leave this out until we get a landline)<br />
+
+<a href="mailto:info@sugarcontemporary.com">info@sugarcontemporary.com</a>
 </p>
 </div>
         <div class="frame" id="top">SUGAR CONTEMPORARY</div>
