--- a/index.html
+++ b/index.html
@@ -18,26 +18,28 @@
 
         <div id="main">
             <p>
-     SUGAR is a curatorial project that produces exhibitions, events, publications, and digital platforms. 
+
+                 
+     <span class="emphasis">SUGAR</span> is a curatorial project making exhibitions, events, publications, and digital platforms. <span class="cPointer" data-pointer="/V2/img/Sugar-11.jpg">We initiate continuous research that unfolds as a group show between 2018-2022.</span>
 </p>
 <p>
-Formed as a continuous research project between 2018-2022. 
+<span class="cPointer" data-pointer="/V2/img/pickle.png">Opening October 2019</span>
 </p>
+
 <p>
-Opening October 2019 <br />
 Opening hours Tuesday-Saturday 11:00am-6:00pm 
 </p>
 <p>
-130 Queens Quay E. Toronto (ground floor North-West corner at Jarvis) 
+130 Queens Quay E. Toronto<Br />(ground floor North-West corner at Jarvis) 
 </p>
 <p>
-Situated near Toronto’s historic Sugar Refinery at the waterfront, the site provides context for our conceptual framework. 
+Located near Toronto’s historic Sugar Refinery, this waterfront site provides the conceptual framework of our project. 
 </p>
 <p>
-SUGAR is a unique partnership between Daniels Waterfront Corporation, Carol Weinbaum & Niall Haggart, and SUGAR co-directors/curators Ala Roushan & Xenia Benivolski.
+<span class="cPointer" data-pointer="/V2/img/anna-zett2.jpg"><span class="emphasis">SUGAR</span> is a unique partnership between Daniels Waterfront Corporation, Carol Weinbaum & Niall Haggart, and <span class="emphasis">SUGAR</span> co-directors/curators Ala Roushan & Xenia Benivolski.</span>
 </p>
 <p>
-SUGAR Curatorial Advisory Group includes: Gaëtane Verna, Candice Hopkins, Chrissie Iles, Paul O’Niell and Dorothée Dupuis. 
+<span class="emphasis">SUGAR</span> Curatorial Advisory Group includes: Gaëtane Verna, Candice Hopkins, Chrissie Iles, Paul O’Neill and Dorothée Dupuis. 
 </p>
 <p>
 <a href="mailto:info@sugarcontemporary.com">info@sugarcontemporary.com</a>
